--- a/random.html
+++ b/random.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+
+<html lang="en">
 <head>
-	<!--  TIP 
+	<!--  TIP
 	You will find any errors from the head section using the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/favicon">
-	<link rel="stylesheet" href="css/rest.css">
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
@@ -20,17 +22,19 @@
 			</ul>
 		</nav>
 	</header>
-	
-	<h2>Random Page</h2>
 
-	<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools HTML 
-		tutorial</a> as well as the readings from Shay Howe's 
-		<a href = "https://learn.shayhowe.com/html-css/"<a>HTML and CSS tutorial</a>.
+	<main>
+
+	<h1>Random Page</h1>
+
+	<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML 
+		tutorial</a> as well as the readings from Shay Howe's</p>
+		<a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
 
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
-
+	</main>
 	<footer>
-		<p>Colleen van Lent copy 2023</p>
+		<p>Colleen van Lent &copy; 2023</p>
 	</footer>
 </body>
 </html>
