--- a/family.html
+++ b/family.html
@@ -17,10 +17,9 @@
 			<li><a href = "random.html">Random Stuff</a></li>
 			<li><a href = "https://si.umich.edu/">UMSI</a></li>
 		</ul>
-	   <nav>
-	</header>
-
+	</nav>
 	<h1>Family</h1>
+	</header>
 
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p><br>
