--- a/random.html
+++ b/random.html
@@ -15,10 +15,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li>About Me</li>
-				<li>My Family</li>
+				<li><a href = "index.html" >About Me</a>/li>
+				<li><a href = "family.html">My Family</a></li>
 				<li class="active">Random Stuff</li>
-				<li>UMSI</li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
 		<h1>Random Page</h1>
