--- a/random.html
+++ b/random.html
@@ -15,7 +15,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href = "index.html" >About Me</a>/li>
+				<li><a href = "index.html" >About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
 				<li class="active">Random Stuff</li>
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
