--- a/family.html
+++ b/family.html
@@ -15,13 +15,13 @@
 				<li><a href = "index.html">About Me</a></li>
 				<li class="active"><a href = "family.html" >My Family</a></li>
 				<li><a href = "random.html">Random Stuff</a></li>
-				<li><a href = "https://si.umich.edu/">UMSI</a></li>
+				<li><a href = "https://www.si.umich.edu/">UMSI</a></li>
 			</ul>
 		</nav>
-		<h1>Family</h1>
 	</header>
 
 	<main>
+		<h1>Family</h1>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p><br>
 			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
 			<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls posing in front of a sign for Ben Reifel Visitor Center">
