--- a/random.html
+++ b/random.html
@@ -21,13 +21,15 @@
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
 	</header>
 
 	<main>
-	<h1>Random Page</h1>
-	<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML
+
+
+	<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML 
 		tutorial</a> as well as the readings from Shay Howe's</p>
-		<a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
+		<a href = "https://www.learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
 
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 	</main>
