--- a/random.html
+++ b/random.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li><a href = "index.html" >About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
-				<li class="active">Random Stuff</li>
+				<li class="active"><a href = "random.html" >Random</a></li>
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
