--- a/random.html
+++ b/random.html
@@ -27,11 +27,11 @@
 	<main>
 
 
-	<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML 
-		tutorial</a> as well as the readings from Shay Howe's</p>
-		<a href = "https://www.learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
+	<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML
+		tutorial</a> as well as the readings from Shay Howe's
+		<a href = "https://www.learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.</p>
 
-	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
+	<p>Using the Piazza site is another great way to stay on top of your classwork.</p>
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2023</p>
