--- a/family.html
+++ b/family.html
@@ -27,7 +27,7 @@
 			<img src="images/badlands.jpg" width="1000" alt = "A boy and two girls posing in front of a sign for Ben Reifel Visitor Center">
 			<img src="images/falling.jpg" width="25" alt = "A boy is holding onto a rock posing as if he is falling.">
 			<img src="images/rushmore.jpg" width="1000" alt = "Four presidential faces carved into Mount Rushmore">
-			<img src="images/jewel_cave.jpg" width="25" alt = "A boy and two girls posing in front of a sign for Jewel Cave National Monument">
+			<img src="images/jewel_cave.JPG" width="25" alt = "A boy and two girls posing in front of a sign for Jewel Cave National Monument">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 
